--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -38,6 +38,7 @@ $terminal = kitty
 $fileManager = nautilus
 $menu = wofi --show drun
 $browser = firefox
+$emacs = emacsclient -c
 
 
 #################
@@ -78,6 +79,8 @@ cursor {
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 windowrule = opacity 0.8, ^(kitty)$
+windowrule = opacity 0.8, ^(emacs)$
+
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
@@ -207,6 +210,8 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, O, exec, $emacs
+bind = $mainMod, N, exec, $emacs --eval "(elfeed)"
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
