--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "position": "top",
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["tray", "upower", "power-profiles-daemon", "pulseaudio", "clock"],
+    "modules-right": ["custom/news", "network", "upower", "power-profiles-daemon", "pulseaudio", "group/group-power"],
 
     "hyprland/workspaces": {
 		"format": "{icon} {windows}",
@@ -11,12 +11,13 @@
 			"magic": "󱡄 "
 		},
 		"persistent-workspaces": {
-			"*": 2
+			"*": 0
 		},
-		"window-rewrite-default": "",
+		//"window-rewrite-default": " ",
 		"window-rewrite": {
 			"class<firefox>": " ", // Windows whose classes are "firefox",
-			"kitty": " "
+			"kitty": " ",
+			"class<emacs>": " "
 		},
 		"show-special": true
 	},
@@ -25,6 +26,46 @@
 		"format": "󱞡  {}",
 		"separate-outputs": true,
 		"max-length": 100
+	},
+
+	"group/group-power": {
+		"orientation": "horizontal",
+		"drawer": {
+			"transition-duration": 500,
+			"transition-left-to-right": false,
+			"children-class": "drawer"
+		},
+		"modules": [
+			"clock",
+			"custom/reboot",
+			"custom/shutdown",
+			"custom/quit",
+			"custom/suspend"
+		]
+	},
+
+	"custom/quit": {
+		"format": "󰍃 ",
+		"tooltip": false,
+		"on-click": "hyprctl dispatch exit"
+	},
+
+	"custom/reboot": {
+		"format": " ",
+		"tooltip": false,
+		"on-click": "reboot",
+	},
+
+	"custom/shutdown": {
+		"format": "⏻ ",
+		"tooltip": false,
+		"on-click": "shutdown",
+	},
+
+	"custom/suspend": {
+		"format": "󰒲 ",
+		"tooltip": false,
+		"on-click": "systemctl suspend"
 	},
 
     "clock": {
@@ -53,15 +94,7 @@
 		"native-path": "BAT0",
 		"icon-size": 16,
 		"tooltip": true,
-		"tooltip-spacing": 16,
-		//"format-alt": "abcdef"
-		"menu": "on-click",
-        "menu-file": "~/.config/waybar/power_menu.xml",
-        "menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-		}
+		"tooltip-spacing": 16
 	},
 
     "network": {
@@ -71,6 +104,12 @@
         "format-disconnected": "󱘖 ",
         "tooltip-format-wifi": " {signalStrength}%",
         "max-length": 30,
+        "menu": "on-click",
+        "menu-file": "~/.config/waybar/network_menu.xml",
+        "menu-actions": {
+        	"nmtui": "kitty -e nmtui-connect",
+        	"nmcm": "nm-connection-editor"
+		}
     },
 
     "pulseaudio": {
@@ -101,7 +140,9 @@
         "power-saver": " "
       }
     },
+
+    "custom/news": {
+    	"format": "󱀁 ",
+    	"on-click": "emacsclient --eval '(elfeed-update)' && emacsclient -c --eval '(elfeed)'"
+	}
 },
-
-}
-
