minor fix for default window rewrites

--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -13,7 +13,7 @@
 		"persistent-workspaces": {
 			"*": 0
 		},
-		//"window-rewrite-default": " ",
+		"window-rewrite-default": "",
 		"window-rewrite": {
 			"class<firefox>": " ", // Windows whose classes are "firefox",
 			"kitty": " ",
