--- a/hyprland/waybar/config.jsonc
+++ b/hyprland/waybar/config.jsonc
@@ -3,7 +3,7 @@
     "position": "top",
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["custom/news", "network", "upower", "power-profiles-daemon", "pulseaudio", "group/group-power"],
+    "modules-right": ["network", "upower", "power-profiles-daemon", "pulseaudio", "group/group-power"],
 
     "hyprland/workspaces": {
 		"format": "{icon} {windows}",
