--- a/shell-term/kitty/kitty.conf
+++ b/shell-term/kitty/kitty.conf
@@ -2608,8 +2608,8 @@ bold_italic_font auto
 # END_KITTY_FONTS
 
 # BEGIN_KITTY_THEME
-# Everforest Dark Hard
+# Everforest Dark Soft
 include current-theme.conf
 # END_KITTY_THEME
 
-font_size	12.0
+font_size	11.0
