feat: hyprland mods

--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -52,6 +52,7 @@ $emacs = emacsclient -c
 # exec-once = $terminal
 exec-once = nm-applet --indicator
 exec-once = waybar & hyprpaper
+exec-once = swaync
 
 
 #############################
@@ -79,13 +80,13 @@ cursor {
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
-windowrule = opacity 0.9, ^(kitty)$
+windowrule = opacity 1.0, ^(kitty)$
 windowrule = opacity 0.8, ^(emacs)$
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 2
+    gaps_out = 2
 
     border_size = 1
 
@@ -104,14 +105,14 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 1
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
 	shadow {
-		enabled = true
+		enabled = false
 		range = 4
 		render_power = 3
 		color = rgba(1a1a1aee)
@@ -211,10 +212,12 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, I, exec, swaync-client -t # dwindle
 
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, O, exec, $emacs
 bind = $mainMod, N, exec, $emacs --eval "(elfeed)"
+bind = $mainMod, W, exec, pkill -SIGUSR1 waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
